Ported a method